'GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.17.2

  - Support dequoting of hex bytea format for 9.0.
    [Dagfinn Ilmari Mannsåker] (CPAN bug #60200).
  - Fix failing test in t/04misc.t on Perl 5.12. [Eric Simon]
  - Allow data_sources() to accept any case-variant of 'dbi:Pg' (CPAN bug #61574)

2.17.1 Released April 8, 2010

  - Only use lo_import_with_oid if Postgres libraries are 8.4 or better
    [GSM] (CPAN bug #56363)

2.17.0 Released April 6, 2010 (subversion r13890)

  - Do not automatically ROLLBACK on a failed pg_cancel [GSM] (CPAN bug #55188)
  - Added support for new lo_import_with_oid function.
    [GSM] (CPAN bug #53835)
  - Don't limit stored user name to \w in tests [GSM] (CPAN bug #54372)
  - Allow tests to support versions back to Postgres 7.4 [GSM]

2.16.1 Released January 20, 2010 (subversion r13756)

  - Output error messages in UTF-8 as needed. Reported by 
    Michael Hofmann. [GSM] (CPAN bug #53854)

2.16.0 Released December 17, 2009 (subversion r13672)

 - Put in a test for high-bit characters in bytea handling.
   [Bryce Nesbitt] (see also CPAN bug #39390)

 - Better SQLSTATE code on connection failure (CPAN bug #52863)
   [Chris Travers with help from Andrew Gierth]

 - Fixed POD escapes (CPAN bug #51856) [FWIE@cpan.org]

2.15.1 Released August 7, 2009 (subversion r13173)

  - Release to fix the SIGNATURE file. [GSM]

2.15.0 Released August 4, 2009 (subversion r13164)

  - Use PQexecPrepared even when no placeholders (CPAN bug #48155) [GSM]
  - Allow execute_array and bind_param_array to take oddly numbered items, 
    such that DBI will make missing entries undef/null (CPAN bug #39829) [GSM]
  - Put single quotes around array literals when quoting arrays via
    the quote() method. Per report from David Garamond (CPAN bug #48420) [GSM]

2.14.1 Released July 28, 2009 (subversion r13140)

  - Remove invalid bigint assignment [Tim Bunce]

2.14.0 Released July 27, 2009 (subversion r13130)
